--- a/frontend/src/components/keyboard/styles.module.css
+++ b/frontend/src/components/keyboard/styles.module.css
@@ -1,6 +1,14 @@
 div.keyboard {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 340px;
+  width: 275px;
+  box-shadow: -2px 1px 10px 2px #a6a6a6;
+  background-color: white;
   display: grid;
-  grid-template-columns: repeat(4, 50px);
-  height: 270px;
   grid-gap: 5px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  padding: 10px;
 }
