--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,24 +1,20 @@
 @font-face {
-  font-family: "Heebo";
-  src: url("../public/heebo_font.ttf");
+  font-family: 'Inter';
+  src: url('./assets/fonts/inter.ttf');
 }
 
 * {
-  box-sizing: border-box;
+  font-family: 'Inter';
+  height: 1vh;
+  width: 1vw;
   margin: 0;
   padding: 0;
-  font-family: "Heebo", sans-serif;
-  text-rendering: optimizeLegibility;
-  overflow: hidden;
-  white-space: nowrap;
-  color: #121212;
-}
-
-body {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: #eeeeee;
+  box-sizing: border-box;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-user-focus: none;
 }
