logica dos botões alterado, suporte ao parenteses e copia para o clipboard

--- a/frontend/src/components/prompt/styles.module.css
+++ b/frontend/src/components/prompt/styles.module.css
@@ -5,3 +5,11 @@ div.prompt {
   height: 150px;
   width: 275px;
 }
+
+div.prompt:hover {
+  cursor: grab;
+}
+
+div.prompt:active {
+  cursor: grabbing;
+}
