--- a/frontend/src/components/keyboard_button/styles.css
+++ b/frontend/src/components/keyboard_button/styles.css
@@ -31,3 +31,12 @@
 .background:active {
   background-color: rgba(166, 166, 166, 0.5);
 }
+
+.badge {
+  position: relative;
+  right: 10px;
+  top: 10px;
+  height: 15px;
+  width: 15px;
+  background-color: green;
+}
